# Music-NEAR-NFT

./: .env  .gitignore  _headers  deploy.md  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts  wasm-base64.txt
nft-mint-near/: netlify.toml  package-lock.json  package.json  vite.config.ts
nft-mint-near/src/: App.tsx  index.css
nft-mint-near/src/components/: NFTModal.tsx
nft-mint-near/src/components/Layout/: Footer.tsx  Layout.tsx
nft-mint-near/src/contexts/: NearContext.tsx
nft-mint-near/src/pages/: NFTDetails.tsx
nft-mint-near/src/types/: nft.ts
nft_contract/: Cargo.toml
nft_contract/src/: lib.rs  updated_lib.rs
src/: App.tsx  index.css  main.tsx  polyfills.ts
src/components/: MintNFT.tsx  NFTGallery.tsx  SFTCard.tsx
src/components/Layout/: Footer.tsx  Header.tsx
src/contexts/: NearContext.tsx  WalletSelectorContext.tsx
src/pages/: Marketplace.tsx  MintNFT.tsx  MyNFTs.tsx  NFTDetails.tsx
src/services/: near.ts  pinata.ts
src/store/actions/: action-types.ts  app.action.ts
src/store/reducers/: app.reducer.ts  index.ts
src/utils/: wallet-selector.ts
