[package]
name = "nft_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Remove abi feature
near-sdk = { version = "5.0.0" }
serde = "1.0.219"
serde_json = "1.0"
# Update Borsh to a version compatible with near-sdk 5.x
borsh = "1.1.0"
borsh-derive = "1.1.0"

# Modified release profile for better WASM compatibility
[profile.release]
codegen-units = 1
opt-level = 3  # Changed from "z" to 3 for better compatibility
lto = "thin"   # Changed from true to "thin"
debug = false
panic = "abort"
overflow-checks = true
